--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,7 @@
 
 <web-app>
     <display-name>Archetype Created Web Application</display-name>
+
     <servlet>
         <servlet-name>RegisterServlet</servlet-name>
         <servlet-class>controller.RegisterServlet</servlet-class>
@@ -22,18 +23,22 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>RegisterServlet</servlet-name>
-        <url-pattern>/jsp/register.servlet</url-pattern>
+        <url-pattern>/register</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/jsp/login.servlet</url-pattern>
+        <url-pattern>/login</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>UpdatePasswordServlet</servlet-name>
-        <url-pattern>/jsp/updatePassword.servlet</url-pattern>
+        <url-pattern>/updatePassword</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>LaunchCommodityServlet</servlet-name>
-        <url-pattern>/jsp/launchCommodity.servlet</url-pattern>
+        <url-pattern>/launchCommodity</url-pattern>
     </servlet-mapping>
+
+    <welcome-file-list>
+        <welcome-file>login.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
