--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+        "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
     <display-name>Archetype Created Web Application</display-name>
@@ -21,6 +21,10 @@
         <servlet-name>LaunchCommodityServlet</servlet-name>
         <servlet-class>controller.LaunchCommodityServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>AddCImagesServlet</servlet-name>
+        <servlet-class>controller.AddCImagesServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RegisterServlet</servlet-name>
         <url-pattern>/register</url-pattern>
@@ -36,6 +40,10 @@
     <servlet-mapping>
         <servlet-name>LaunchCommodityServlet</servlet-name>
         <url-pattern>/launchCommodity</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AddCImagesServlet</servlet-name>
+        <url-pattern>/AddCImagesServlet</url-pattern>
     </servlet-mapping>
 
     <welcome-file-list>
