完成愿望单功能

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -55,6 +55,10 @@
         <servlet-name>DeleteCommodityServlet</servlet-name>
         <servlet-class>controller.commodity.DeleteCommodityServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>DeleteWishlistServlet</servlet-name>
+        <servlet-class>controller.wishlist.DeleteWishlistServlet</servlet-class>
+    </servlet>
 
     <servlet-mapping>
         <servlet-name>RegisterServlet</servlet-name>
@@ -91,6 +95,10 @@
     <servlet-mapping>
         <servlet-name>DeleteCommodityServlet</servlet-name>
         <url-pattern>/DeleteCommodityServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DeleteWishlistServlet</servlet-name>
+        <url-pattern>/DeleteWishlistServlet</url-pattern>
     </servlet-mapping>
 
     <welcome-file-list>
